--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,35 @@
 /* Los estilos de tu proyecto */
 img{
-width: 90%
+width: 100%;
 }
 
-div.jumbotron#first-image {
-    background-position: center;
+.container-fluid{
+  padding: 0;
+}
+
+.navbar-header{
+  padding: 0;
+}
+.navbar-right{
+  padding-top: 1%;
+}
+.navbar-right>li>a{
+  color: black;
+}
+
+
+
+.jumbotron {
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
     margin-bottom: 0px;
+    background-image: url('../assets/images/taxi.jpg');
+    height: 80vh;
   }
 
-  div.jumbotron#first-image {
-    background-image: url('../assets/images/taxi.jpg');
-    height: 150vh;
-  }
+ 
+.form-horizontal {
+  background-color: #F7B617;
+  width: 45%;
+}
