--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
-/* Los estilos de tu proyecto */
-img{
-width: 100%;
-}
 
-.container-fluid{
+
+.container-fluid,
+.principal-header,
+.row{
   padding: 0;
+  margin: 0;
 }
 
 .navbar-header{
@@ -12,6 +12,7 @@ width: 100%;
 }
 .navbar-right{
   padding-top: 1%;
+  margin-right: 10%;
 }
 .navbar-right>li>a{
   color: black;
@@ -19,17 +20,43 @@ width: 100%;
 
 
 
-.jumbotron {
+.jumbotron.uno {
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
     margin-bottom: 0px;
     background-image: url('../assets/images/taxi.jpg');
-    height: 80vh;
+    height: 100vh;
   }
 
  
-.form-horizontal {
+.panel-default {
   background-color: #F7B617;
-  width: 45%;
+  float: right;
+  width: 35%;
+  color: white;
+  border: none; 
+}
+.viaja{
+  margin-left: 5%;
+}
+
+.logo-blanco{
+  width: 15%;
+  margin-top: 3%;
+  margin-bottom:1%;
+}
+
+.jumbotron.dos{
+  height: 80vh;
+  background-color: #F7B617;
+}
+
+.panel-dos{
+  background:none;
+  border-top:2px solid white;
+  border-bottom:2px solid white;
+  border-right:2px solid white;
+  height: 70vh;
+  width: 70%;
 }
